fix: size text_area and overflowing in table

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -125,6 +125,16 @@ body {
     float: none;
   }
 }
+// css for td
+td {
+  max-width: 100px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.description_area {
+  height: 200px;
+}
 
 // css for menubar manage places
 
